--- a/index.html
+++ b/index.html
@@ -43,10 +43,9 @@
 
           <h3>Design & Development</h3>
           <p>
-            I started learning to code when I was 21 years old because I wanted
-            to make my own websites and web applications. Over time, I have
-            gained a wealth of experience designing and developing web
-            applications.
+            I started learning to code because I wanted to make my own websites
+            and web applications. Over time, I have gained a wealth of
+            experience designing and developing web applications.
           </p>
         </div>
         <div class="skill-row">
